ahora el index tiene un codigo extra

--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
     <h1 class="colorVerde">Esta es una prueba de Git</h1>
 
-    <p class="colorRojo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita numquam consequuntur enim quod tempore beatae
+    <p class="colorRojo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita numquam consequuntur enim
+        quod tempore beatae
         deleniti, cumque nemo reiciendis impedit quasi error ut aliquam voluptate nostrum minima eligendi, quia minus.
+    </p>
+
+    <h1 class="colorVerde">Segunto titulo de prueba</h1>
+
+    <p class="colorRojo">esto es un segundo texto para acompañar al titulo
     </p>
 </body>
 
